# libra

./: .env.example  Cargo.toml  README.md
src/: main.rs  utils.rs
src/commands/: fun.rs  general.rs  math.rs  meta.rs  mod.rs  owner.rs
