[package]
name = "libra-bot"
version = "0.1.1"
authors = ["rsaihe"]
edition = "2018"
description = "A Discord bot for personal use."
readme = "README.md"
repository = "https://github.com/rsaihe/libra"
license = "MIT"
keywords = ["discord", "bot"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
env_logger = "0.7"
kankyo = "0.3"
log = "0.4"
serenity = "0.8"
